--- a/ads/mraid-banner.html
+++ b/ads/mraid-banner.html
@@ -1,5 +1,26 @@
 MRAID Banner ad
-<script>
-    console.log("MRAID banner ad starts.");
-</script>
 
+<div id="log-out">
+</div>
+<script>
+    function addLog(str){
+        var l = document.getElementById("log-out");
+        l.innerHTML = str + innerHTML;
+    }
+
+    function waitReady() {
+        mraid.addEventListener("error", (message, action) => {
+            console.log(message, action)
+        })
+
+        if (mraid.getState() === 'loading') {
+            mraid.addEventListener("ready", waitViewable)
+        } else {
+            // if already ready
+            // waitViewable()
+        }
+    }
+
+    addLog("hoge");
+    waitReady();
+</script>
