--- a/ads/mraid-banner.html
+++ b/ads/mraid-banner.html
@@ -1,6 +1,6 @@
 MRAID Banner ad
 
-<div id="log-out">
+<div id="log-out" style="background-color:blue;">
 </div>
 <script>
     function addLog(str){
