--- a/ads/mraid-banner.html
+++ b/ads/mraid-banner.html
@@ -5,7 +5,7 @@ MRAID Banner ad?
 <script>
     function addLog(str){
         var l = document.getElementById("log-out");
-        l.innerHTML = str + innerHTML;
+        l.innerHTML = str + l.innerHTML;
     }
 
     function waitReady() {
