--- a/ads/mraid-banner.html
+++ b/ads/mraid-banner.html
@@ -1,7 +1,9 @@
+<script src="mraid.js"></script> 
 MRAID Banner ad?
 
 <div id="log-out" style="background-color:blue;">
 </div>
+
 <script>
     function addLog(str) {
         var l = document.getElementById("log-out");
