--- a/ads/viewability/ad.html
+++ b/ads/viewability/ad.html
@@ -1,4 +1,4 @@
 <html>
-<script src="viewabilityCompliance.v1.js"></script>
+<script src="https://arimura.github.io/ad-samples/ads/viewabilityCompliance.v1.js"></script>
 </html>
 
